feat(wallet): Portfolio Asset Segmented Controls

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -253,6 +253,7 @@ leo_icons = [
   "trash.svg",
   "tune.svg",
   "usb.svg",
+  "usd-circle.svg",
   "user-accounts.svg",
   "user.svg",
   "verification-filled-color.svg",
