Added system tray mode to wireguard service executable (#18960)
* Added interactive mode to wireguard service executable with system tray menu

* Moving status icon related code into status_icon folder

* Rename interactive to status_tray

* Rename InteractiveMain to StatusTrayRunner

* Rename BraveVpnMenuModel -> TrayMenuModel

* More renamings with local refactorings

* Added test for StatusTrayRunner menu state

* Added comments for supported command lines

* Rename common to utils

* Update components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/utils/utils.h

Co-authored-by: Simon Hong <shong@brave.com>

* Update components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/utils/utils.cc

Co-authored-by: Simon Hong <shong@brave.com>

* Update components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/status_tray_runner.cc

Co-authored-by: Simon Hong <shong@brave.com>

* Use urls from brave_vpn/common

---------

Co-authored-by: Simon Hong <shong@brave.com>

--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/BUILD.gn
@@ -30,8 +30,10 @@ executable("brave_vpn_wireguard_service") {
     ":version_resources",
     "common",
     "service",
+    "status_tray",
     "//base",
     "//base:base_static",
+    "//brave/components/brave_vpn/common/wireguard/win",
     "//build/win:default_exe_manifest",
     "//chrome/install_static:install_static_util",
     "//components/crash/core/app",
