--- a/components/brave_vpn/common/wireguard/win/BUILD.gn
+++ b/components/brave_vpn/common/wireguard/win/BUILD.gn
@@ -3,18 +3,33 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this file,
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
+import("//brave/build/config.gni")
 import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
+import("//build/toolchain/win/midl.gni")
 
+assert(is_win)
 assert(enable_brave_vpn)
+
+midl("brave_wireguard_manager_idl") {
+  sources = [ "brave_wireguard_manager_idl.idl" ]
+
+  writes_tlb = true
+}
 
 source_set("win") {
   sources = [
     "service_constants.cc",
     "service_constants.h",
+    "wireguard_utils.cc",
+    "wireguard_utils.h",
   ]
   deps = [
+    ":brave_wireguard_manager_idl",
     "//base",
     "//brave/components/brave_vpn/common/buildflags",
+    "//brave/components/brave_vpn/common/win",
+    "//brave/components/brave_vpn/common/wireguard",
     "//chrome/install_static:install_static_util",
+    "//third_party/abseil-cpp:absl",
   ]
 }
