Synchronization of brave vpn tray menu items state with the service and the browser

--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
@@ -15,6 +15,7 @@ source_set("status_tray") {
     "resources",
     "//base",
     "//brave/components/brave_vpn/common",
+    "//brave/components/brave_vpn/common/win",
     "//brave/components/brave_vpn/common/wireguard/win",
     "//ui/base",
     "//ui/native_theme",
