--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -571,6 +571,12 @@ source_set("ui") {
       "//brave/components/brave_vpn/browser",
       "//brave/components/brave_vpn/common",
     ]
+    if (is_win) {
+      deps += [
+        "//brave/components/brave_vpn/common/wireguard",
+        "//brave/components/brave_vpn/common/wireguard/win",
+      ]
+    }
   }
 
   if (is_linux) {
