Add localization to Wireguard service tray menu

--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
@@ -6,7 +6,8 @@
 source_set("status_tray") {
   sources = [
     "brave_vpn_tray_command_ids.h",
-    "brave_vpn_tray_strings_en.h",
+    "l10n_util.cc",
+    "l10n_util.h",
     "status_tray_runner.cc",
     "status_tray_runner.h",
   ]
@@ -14,6 +15,7 @@ source_set("status_tray") {
   deps = [
     "resources",
     "//base",
+    "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/resources:strings",
     "//brave/components/brave_vpn/common",
     "//brave/components/brave_vpn/common/win",
     "//brave/components/brave_vpn/common/wireguard/win",
