Move brave_vpn_wireguard_servce -> brave/browser/brave_vpn/win

--- a/browser/brave_vpn/sources.gni
+++ b/browser/brave_vpn/sources.gni
@@ -26,6 +26,7 @@ if (enable_brave_vpn) {
     brave_browser_brave_vpn_deps += [
       "//brave/app:brave_generated_resources_grit",
       "//brave/browser:browser_process",
+      "//brave/browser/brave_vpn/win/brave_vpn_wireguard_service",
       "//brave/components/brave_vpn/browser/connection/ikev2/win/brave_vpn_helper:common",
       "//brave/components/brave_vpn/common/win",
       "//chrome/common:constants",
