--- a/components/brave_vpn/common/win/BUILD.gn
+++ b/components/brave_vpn/common/win/BUILD.gn
@@ -14,6 +14,7 @@ source_set("win") {
     "utils.h",
   ]
   visibility = [
+    "//brave/browser/*",
     "//brave/components/brave_vpn/*",
     "//chrome/browser/*",
   ]
