--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -333,7 +333,10 @@ test("brave_unit_tests") {
       "//brave/components/skus/browser:unit_tests",
     ]
     if (is_win) {
-      deps += [ "//brave/browser/brave_vpn/dns:unit_tests" ]
+      deps += [
+        "//brave/browser/brave_vpn/dns:unit_tests",
+        "//brave/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray:unit_tests",
+      ]
     }
   }
   if (toolkit_views) {
