--- a/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/resources/BUILD.gn
+++ b/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/status_tray/resources/BUILD.gn
@@ -4,6 +4,9 @@
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
 import("//base/win/embedded_i18n/generate_embedded_i18n.gni")
+import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")
+
+assert(enable_brave_vpn)
 
 source_set("resources") {
   inputs = [
@@ -20,41 +23,38 @@ generate_embedded_i18n("generate_strings") {
 
   xtb_relative_path = "strings"
   grdfile_name = "brave_components_strings"
-  xtb_file_name = "brave_components_resources"
+
+  # Exclude languages not supported by Brave
+  # https://github.com/brave/brave-browser/wiki/Strings-and-Localization#information-for-submitting-localization-orders
   brave_supported_i18_locales = default_embedded_i18_locales - [
-    "af",
-    "as",
-    "az",
-    "be",
-    "bs",
-    "cy",
-    "eu",
-    "gu",
-    "hy",
-    "is",
-    "ka",
-    "kk",
-    "km",
-    "ky",
-    "lo",
-    "mk",
-    "ml",
-    "mn",
-    "mr",
-    "my",
-    "ne",
-    "pa",
-    "or",
-    "si",
-    "sq",
-    "sr-Latn",
-    "ta",
-    "te",
-    "ur",
-    "uz",
-    "zh-HK",
-    "zu",
-  ]
+                                  "af",
+                                  "as",
+                                  "az",
+                                  "be",
+                                  "bs",
+                                  "cy",
+                                  "eu",
+                                  "hy",
+                                  "is",
+                                  "ka",
+                                  "kk",
+                                  "km",
+                                  "ky",
+                                  "lo",
+                                  "mk",
+                                  "mn",
+                                  "my",
+                                  "ne",
+                                  "pa",
+                                  "or",
+                                  "si",
+                                  "sq",
+                                  "sr-Latn",
+                                  "ur",
+                                  "uz",
+                                  "zh-HK",
+                                  "zu",
+                                ]
   grd_files_info = [ [
         grdfile_folder,
         grdfile_name,
