Apply new Playlist WebUI
Replace the experimental UI with new UI

* Added CSP rules to load our static resources like svg and font.

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -148,12 +148,14 @@ leo_icons = [
   "arrow-right.svg",
   "arrow-small-down.svg",
   "arrow-small-up.svg",
+  "autoplay-off.svg",
   "autoplay-on.svg",
   "backward.svg",
   "bluetooth.svg",
   "browser-extensions.svg",
   "carat-down.svg",
   "check-circle-filled.svg",
+  "check-circle-outline.svg",
   "check-normal.svg",
   "checkbox-checked.svg",
   "checkbox-unchecked.svg",
@@ -170,15 +172,18 @@ leo_icons = [
   "download.svg",
   "edit-box.svg",
   "edit-pencil.svg",
+  "end-outline.svg",
   "ethereum-on.svg",
   "expand.svg",
   "eye-off.svg",
   "eye-on.svg",
-  "filter-settings.svg",
   "file-edit.svg",
+  "filter-settings.svg",
   "flash.svg",
   "flashdrive.svg",
   "font-size.svg",
+  "forward-15.svg",
+  "fullscreen-on.svg",
   "graph.svg",
   "grid04.svg",
   "help-outline.svg",
@@ -186,8 +191,8 @@ leo_icons = [
   "image.svg",
   "info-filled.svg",
   "info-outline.svg",
-  "key.svg",
   "key-lock.svg",
+  "key.svg",
   "launch.svg",
   "link-normal.svg",
   "list-checks.svg",
@@ -225,17 +230,27 @@ leo_icons = [
   "news-worldnews.svg",
   "nft.svg",
   "notification.svg",
+  "pause-filled.svg",
+  "picture-in-picture.svg",
+  "play-filled.svg",
+  "playlist-open-side.svg",
   "plus-add.svg",
   "product-bat-outline.svg",
+  "product-brave-ai.svg",
   "product-brave-color.svg",
   "product-brave-monochrome.svg",
   "product-brave-wallet.svg",
+  "product-ipfs-outline.svg",
+  "product-ipfs-outline.svg",
+  "product-playlist-bold-add.svg",
+  "product-playlist.svg",
   "product-sync.svg",
   "product-translate.svg",
   "qr-code.svg",
   "radio-checked.svg",
   "radio-unchecked.svg",
   "remove-circle-outline.svg",
+  "rewind-15.svg",
   "rocket.svg",
   "safe.svg",
   "search-fuel-tank.svg",
@@ -243,11 +258,15 @@ leo_icons = [
   "send.svg",
   "settings.svg",
   "shield-done.svg",
+  "shield-star.svg",
+  "shield-star.svg",
+  "shuffle-on.svg",
   "smartphone-hand.svg",
   "solana-on.svg",
   "sort-desc.svg",
   "sparkles.svg",
   "stack.svg",
+  "start-outline.svg",
   "swap-horizontal.svg",
   "sync.svg",
   "thumb-down.svg",
@@ -256,6 +275,7 @@ leo_icons = [
   "usb.svg",
   "usd-circle.svg",
   "user-accounts.svg",
+  "user-circle.svg",
   "user.svg",
   "verification-filled-color.svg",
   "verification-filled.svg",
@@ -265,13 +285,10 @@ leo_icons = [
   "warning-circle-filled.svg",
   "warning-triangle-filled.svg",
   "warning-triangle-outline.svg",
+  "web3.svg",
+  "web3.svg",
   "window-tab-new.svg",
   "windows-open.svg",
-  "product-ipfs-outline.svg",
-  "web3.svg",
-  "shield-star.svg",
-  "product-brave-ai.svg",
-  "user-circle.svg",
 ]
 
 if (enable_brave_vpn_panel) {
