--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -338,6 +338,7 @@ test("brave_unit_tests") {
     if (is_win) {
       deps += [
         "//brave/browser/brave_vpn/dns:unit_tests",
+        "//brave/browser/brave_vpn/win:unit_tests",
         "//brave/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray:unit_tests",
       ]
     }
