--- a/tools/perf/configs/dashboard/brave-mac-mini-x64-typical.json5
+++ b/tools/perf/configs/dashboard/brave-mac-mini-x64-typical.json5
@@ -2,7 +2,7 @@
   "configurations": [{
     "dashboard-bot-name": "mac-mini-x64-typical",
     "browser-type": "brave",
-    "profile": "brave-typical-v1.50.26",
+    "profile": "brave-typical-mac-v1.55.98",
     "extra-browser-args": [],
     "extra-benchmark-args": [],
   }],
