--- a/tools/perf/configs/dashboard/smoke-chrome.json5
+++ b/tools/perf/configs/dashboard/smoke-chrome.json5
@@ -2,7 +2,7 @@
   "configurations": [{
     "dashboard-bot-name": "test-agent",
     "browser-type": "chrome",
-    "profile": "chrome-typical",
+    "profile": "chrome-typical-114",
     "extra-browser-args": [],
     "extra-benchmark-args": [],
     "save-artifacts": true,
