Uplift of #18834 (squashed) to beta

--- a/browser/misc_metrics/sources.gni
+++ b/browser/misc_metrics/sources.gni
@@ -8,7 +8,16 @@ brave_browser_misc_metrics_sources = [
   "//brave/browser/misc_metrics/page_metrics_service_factory.h",
   "//brave/browser/misc_metrics/page_metrics_tab_helper.cc",
   "//brave/browser/misc_metrics/page_metrics_tab_helper.h",
+  "//brave/browser/misc_metrics/process_misc_metrics.cc",
+  "//brave/browser/misc_metrics/process_misc_metrics.h",
 ]
+
+if (!is_android) {
+  brave_browser_misc_metrics_sources += [
+    "//brave/browser/misc_metrics/vertical_tab_metrics.cc",
+    "//brave/browser/misc_metrics/vertical_tab_metrics.h",
+  ]
+}
 
 brave_browser_misc_metrics_deps = [
   "//brave/browser:browser_process",
