Updates to AIChat UI (#19048)
UI fixes for AIChat

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -270,6 +270,8 @@ leo_icons = [
   "product-ipfs-outline.svg",
   "web3.svg",
   "shield-star.svg",
+  "product-brave-ai.svg",
+  "user-circle.svg",
 ]
 
 if (enable_brave_vpn_panel) {
@@ -299,7 +301,6 @@ if (enable_speedreader) {
     "minus.svg",
     "pause-outline.svg",
     "play-outline.svg",
-    "product-brave-ai.svg",
     "product-readermode.svg",
     "product-speedreader.svg",
     "readermode-dislexyc.svg",
