--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -254,14 +254,10 @@ static_library("browser") {
 
   if (is_android) {
     deps += [
+      # Required for #include "brave/build/android/jni_headers/...
       "//brave/build/android:jni_headers",  # TODO: make separate, as
                                             # "//brave/browser/brave_ads/android:jni_headers",
                                             # for example does
-    ]
-
-    sources += [
-      "android_data_files_installer.cc",
-      "android_data_files_installer.h",
     ]
   }
 }
