--- a/components/brave_ads/core/internal/BUILD.gn
+++ b/components/brave_ads/core/internal/BUILD.gn
@@ -507,6 +507,8 @@ source_set("internal") {
     "ads_client_helper.h",
     "ads_client_notifier.cc",
     "ads_client_notifier_observer.cc",
+    "ads_client_notifier_queue.cc",
+    "ads_client_notifier_queue.h",
     "ads_impl.cc",
     "ads_impl.h",
     "ads_util.cc",
