--- a/browser/extensions/BUILD.gn
+++ b/browser/extensions/BUILD.gn
@@ -4,6 +4,7 @@
 # You can obtain one at https://mozilla.org/MPL/2.0/.
 
 import("//brave/browser/ethereum_remote_client/buildflags/buildflags.gni")
+import("//brave/components/ai_chat/common/buildflags/buildflags.gni")
 import("//brave/components/brave_wayback_machine/buildflags/buildflags.gni")
 import("//brave/components/brave_webtorrent/browser/buildflags/buildflags.gni")
 import("//brave/components/ipfs/buildflags/buildflags.gni")
@@ -145,6 +146,13 @@ source_set("extensions") {
 
   if (enable_brave_wayback_machine) {
     deps += [ "//brave/components/brave_wayback_machine" ]
+  }
+
+  if (enable_ai_chat) {
+    sources += [
+      "api/leo_assistant_api.cc",
+      "api/leo_assistant_api.h",
+    ]
   }
 }
 
