--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -219,6 +219,8 @@ source_set("ui") {
         "webui/ai_chat/ai_chat_ui.h",
         "webui/ai_chat/ai_chat_ui_page_handler.cc",
         "webui/ai_chat/ai_chat_ui_page_handler.h",
+        "webui/settings/brave_settings_leo_assistant_handler.cc",
+        "webui/settings/brave_settings_leo_assistant_handler.h",
       ]
 
       deps += [ "//chrome/browser/favicon" ]
