--- a/components/skus/browser/rs/cxx/Cargo.toml
+++ b/components/skus/browser/rs/cxx/Cargo.toml
@@ -12,7 +12,7 @@ futures = "0.3.19"
 libc = { version = "0.2" }
 skus = { path = "../lib" }
 serde_json = "1.0"
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.2.0", default-features = false, features = ["ansi", "ansi_term", "fmt", "registry", "sharded-slab", "thread_local"] }
 tracing = "0.1"
 
 [lib]
