--- a/components/filecoin/rs/Cargo.toml
+++ b/components/filecoin/rs/Cargo.toml
@@ -15,7 +15,7 @@ num_bigint_chainsafe = { package = "forest_bigint", version = "0.1.2"}
 serde = { version = "^1.0.117", features = ["derive"] }
 serde_json = "^1.0.59"
 thiserror = "^1.0.30"
-blake2b_simd = "^1.0.0"
+blake2b_simd = "1"
 cid = { version = "0.8.5", default-features = false }
 multihash = { version="0.16.3", default-features = false, features = [ "multihash-impl", "blake2b"] }
 fvm_ipld_encoding = "^0.3"
