Localhost Access => Localhost access in site settings, update localhost icon

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -259,6 +259,7 @@ leo_icons = [
   "shield-done.svg",
   "shield-star.svg",
   "shuffle-on.svg",
+  "smartphone-desktop.svg",
   "smartphone-hand.svg",
   "solana-on.svg",
   "sort-desc.svg",
