--- a/tools/perf/configs/dashboard/brave-typical.json5
+++ b/tools/perf/configs/dashboard/brave-typical.json5
@@ -2,7 +2,7 @@
   "configurations": [{
     "dashboard-bot-name": "asus-w10-slow-laptop-typical",
     "browser-type": "brave",
-    "profile": "brave-typical-v1.46.52",
+    "profile": "brave-typical-win-v1.55.98",
     "extra-browser-args": [],
     "extra-benchmark-args": [],
     "save-artifacts": false,
