--- a/tools/perf/configs/dashboard/smoke-brave.json5
+++ b/tools/perf/configs/dashboard/smoke-brave.json5
@@ -2,7 +2,7 @@
   "configurations": [{
     "dashboard-bot-name": "test-agent",
     "browser-type": "brave",
-    "profile": "brave-typical-v1.50.26",
+    "profile": "brave-typical-win-v1.55.98",
     "extra-browser-args": [],
     "extra-benchmark-args": [],
     "save-artifacts": true,
