--- a/package.json
+++ b/package.json
@@ -389,6 +389,7 @@
   },
   "overrides": {
     "loader-utils": "2.0.3",
-    "json5": "2.2.3"
+    "json5": "2.2.3",
+    "protobufjs": "7.2.4"
   }
 }
