--- a/components/brave_wallet/common/BUILD.gn
+++ b/components/brave_wallet/common/BUILD.gn
@@ -167,11 +167,7 @@ source_set("test_support") {
     "test_utils.h",
   ]
 
-  deps = [
-    "//components/value_store",
-    "//components/value_store:test_support",
-    "//testing/gmock",
-  ]
+  deps = [ "//testing/gmock" ]
 
   public_deps = [ ":mojom" ]
 }  # source_set("test_support")
