Use our own Chromium src fork
The github mirror we make use of has been inactive on the past few days
for some reason. This is a temporary change to allow us to use a fork of
chromium/src in our organisation, that we have permissions to manually
update.

--- a/package.json
+++ b/package.json
@@ -268,7 +268,7 @@
         "dir": "src",
         "tag": "115.0.5790.75",
         "repository": {
-          "url": "https://github.com/chromium/chromium"
+          "url": "https://github.com/brave/chromium"
         }
       }
     }
