Show current feature states on brave://flags.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -13,6 +13,7 @@ CI/run-network-audit:
 - patches/chrome-VERSION.patch
 
 CI/run-upstream-tests:
+- brave/browser/about_flags.cc
 - chromium_src/**/*features.cc
 
 CI/storybook-url:
