Implement market tab v2 desig

--- a/ui/webui/resources/BUILD.gn
+++ b/ui/webui/resources/BUILD.gn
@@ -263,6 +263,7 @@ leo_icons = [
   "smartphone-hand.svg",
   "solana-on.svg",
   "sort-desc.svg",
+  "sort-asc.svg",
   "sparkles.svg",
   "stack.svg",
   "start-outline.svg",
