Moved WalletDataFilesInstallerUtil to fix browser/component layer violation (1)

--- a/components/brave_wallet/browser/BUILD.gn
+++ b/components/brave_wallet/browser/BUILD.gn
@@ -253,6 +253,10 @@ static_library("browser") {
   configs += [ ":sardine_config" ]
 
   if (is_android) {
+    sources += [
+      "wallet_data_files_installer_android_util.cc",
+      "wallet_data_files_installer_android_util.h",
+    ]
     deps += [
       # Required for #include "brave/build/android/jni_headers/...
       "//brave/build/android:jni_headers",  # TODO: make separate, as
