--- a/browser/brave_wallet/android/sources.gni
+++ b/browser/brave_wallet/android/sources.gni
@@ -6,6 +6,7 @@ brave_browser_brave_wallet_android_sources = [
   "//brave/browser/brave_wallet/android/keyring_service_factory_android.cc",
   "//brave/browser/brave_wallet/android/swap_service_factory_android.cc",
   "//brave/browser/brave_wallet/android/tx_service_factory_android.cc",
+  "//brave/browser/brave_wallet/android/wallet_data_files_installer_android.cc",
   "//brave/browser/brave_wallet/android/wallet_native_utils_android.cc",
   "//brave/browser/permissions/brave_dapp_permission_prompt_dialog_controller_android.cc",
   "//brave/browser/permissions/brave_dapp_permission_prompt_dialog_controller_android.h",
@@ -13,5 +14,7 @@ brave_browser_brave_wallet_android_sources = [
   "//brave/browser/permissions/brave_wallet_permission_prompt_android.h",
 ]
 
-brave_browser_brave_wallet_android_deps =
-    [ "//brave/components/brave_wallet/browser:constants" ]
+brave_browser_brave_wallet_android_deps = [
+  "//brave/components/brave_wallet/browser",
+  "//brave/components/brave_wallet/browser:constants",
+]
