--- a/tools/perf/configs/dashboard/brave-typical.json5
+++ b/tools/perf/configs/dashboard/brave-typical.json5
@@ -25,14 +25,14 @@
         "load:media:youtube:2018",
       ]
     },
-    {
-      "name": "system_health.common_desktop",
-      "pageset-repeat": 10,
-      "stories": [
-        "load:chrome:blank",
-        "browse:news:hackernews:2020",
-      ]
-    },
+    // {
+    //   "name": "system_health.common_desktop",
+    //   "pageset-repeat": 10,
+    //   "stories": [
+    //     "load:chrome:blank",
+    //     "browse:news:hackernews:2020",
+    //   ]
+    // },
     {
       "name": "speedometer2",
       "pageset-repeat": 1
