--- a/browser/brave_wallet/android/sources.gni
+++ b/browser/brave_wallet/android/sources.gni
@@ -1,3 +1,8 @@
+# Copyright (c) 2021 The Brave Authors. All rights reserved.
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this file,
+# You can obtain one at https://mozilla.org/MPL/2.0/.
+
 brave_browser_brave_wallet_android_sources = [
   "//brave/browser/brave_wallet/android/asset_ratio_service_factory_android.cc",
   "//brave/browser/brave_wallet/android/blockchain_registry_factory_android.cc",
