--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -997,6 +997,7 @@ source_set("ui") {
       "//brave/components/brave_wallet/common:mojom",
       "//brave/components/brave_wallet_ui:resources",
       "//brave/components/brave_wallet_ui/page/screens/fund-wallet/android:brave_wallet_deposit_page_generated",
+      "//brave/components/brave_wallet_ui/page/screens/fund-wallet/android:brave_wallet_fund_wallet_page_generated",
       "//brave/components/brave_wallet_ui/page/screens/send/android:brave_wallet_send_page_generated",
       "//brave/components/brave_wallet_ui/page/screens/swap/android:brave_wallet_swap_page_generated",
     ]
