--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -115,6 +115,7 @@ test("brave_unit_tests") {
     "//brave/components/brave_ads/common/brave_ads_feature_unittest.cc",
     "//brave/components/brave_ads/common/notification_ad_feature_unittest.cc",
     "//brave/components/brave_ads/common/search_result_ad_feature_unittest.cc",
+    "//brave/components/brave_ads/common/user_attention_feature_unittest.cc",
     "//brave/components/brave_ads/content/browser/search_result_ad/search_result_ad_handler_unittest.cc",
     "//brave/components/brave_ads/core/search_result_ad/search_result_ad_converting_util_unittest.cc",
     "//brave/components/brave_ads/core/search_result_ad/search_result_ad_util_unittest.cc",
