--- a/chromium_presubmit_config.json5
+++ b/chromium_presubmit_config.json5
@@ -60,6 +60,7 @@
     "components/brave_wallet/resources/solana_web3_script\\.js",
     "ios/browser/api/brave_rewards/legacy_database/core_data_models/",
     "third_party/rust/",
+    "tools/crates/",
     "win_build_output/",
   ],
 
