--- a/app/linux/BUILD.gn
+++ b/app/linux/BUILD.gn
@@ -47,11 +47,11 @@ group("dist_resources") {
 extract_symbols("brave_symbols") {
   binary = "$brave_dist_dir/brave"
 
-  if (current_cpu == "x86") {
+  if (target_cpu == "x86") {
     # Use "ia32" instead of "x86" for GYP compat.
     symbol_file = "$root_out_dir/brave.breakpad.ia32"
   } else {
-    symbol_file = "$root_out_dir/brave.breakpad.$current_cpu"
+    symbol_file = "$root_out_dir/brave.breakpad.$target_cpu"
   }
 
   deps = [ "//brave:brave_dist_resources" ]
