Implement "Change folders" of PlaylistActionBubble

--- a/browser/ui/BUILD.gn
+++ b/browser/ui/BUILD.gn
@@ -311,6 +311,12 @@ source_set("ui") {
       "views/page_action/brave_page_action_icon_container_view.h",
       "views/playlist/playlist_action_bubble_view.cc",
       "views/playlist/playlist_action_bubble_view.h",
+      "views/playlist/playlist_action_dialogs.cc",
+      "views/playlist/playlist_action_dialogs.h",
+      "views/playlist/selectable_list_view.cc",
+      "views/playlist/selectable_list_view.h",
+      "views/playlist/thumbnail_view.cc",
+      "views/playlist/thumbnail_view.h",
       "views/rounded_separator.cc",
       "views/rounded_separator.h",
       "views/side_panel/brave_side_panel.cc",
