--- a/browser/ui/color/sources.gni
+++ b/browser/ui/color/sources.gni
@@ -12,6 +12,8 @@ if (!is_android) {
     "//brave/browser/ui/color/brave_color_mixer.cc",
     "//brave/browser/ui/color/brave_color_mixer.h",
     "//brave/browser/ui/color/color_palette.h",
+    "//brave/browser/ui/color/playlist/playlist_color_mixer.cc",
+    "//brave/browser/ui/color/playlist/playlist_color_mixer.h",
   ]
 
   brave_browser_ui_color_mixers_deps += [
