Fixed vpntools build failure
fix https://github.com/brave/brave-browser/issues/31664

we can build vpntools with below.
npm run build -- --target=brave/components/brave_vpn/browser/connection/ikev2/win:vpntool

--- a/components/brave_vpn/browser/connection/ikev2/win/BUILD.gn
+++ b/components/brave_vpn/browser/connection/ikev2/win/BUILD.gn
@@ -51,8 +51,10 @@ executable("vpntool") {
     "userenv.lib",
   ]
   deps = [
+    ":ras_utils",
     ":win",
     "//base",
-    "//brave/components/brave_vpn/browser/connection/ikev2/win:ras_utils",
+    "//brave/components/brave_vpn/browser/connection:common",
+    "//brave/components/brave_vpn/browser/connection/wireguard/win",
   ]
 }
