Fixed StatusTrayRunnerTest unit test failure
fix https://github.com/brave/brave-browser/issues/31597

Reverted part of https://github.com/brave/brave-core/pull/19204 that
caused test crash. Crash happens when accesing string resources in
release build.

--- a/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
+++ b/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
@@ -6,6 +6,7 @@
 source_set("status_tray") {
   sources = [
     "brave_vpn_tray_command_ids.h",
+    "brave_vpn_tray_strings_en.h",
     "status_tray_runner.cc",
     "status_tray_runner.h",
   ]
