--- a/browser/resources/settings/sources.gni
+++ b/browser/resources/settings/sources.gni
@@ -45,6 +45,7 @@ brave_settings_web_component_files = [
   "brave_tor_page/brave_tor_bridges_dialog.ts",
   "brave_tor_page/brave_tor_snowflake_install_failed_dialog.ts",
   "brave_tor_page/brave_tor_subpage.ts",
+  "brave_leo_assistant_page/brave_leo_assistant_page.ts",
   "brave_wallet_page/add_wallet_network_dialog.ts",
   "brave_wallet_page/brave_wallet_page.ts",
   "brave_wallet_page/wallet_networks_list.ts",
@@ -65,6 +66,7 @@ brave_settings_non_web_component_files = [
   "brave_default_extensions_page/brave_default_extensions_browser_proxy.ts",
   "brave_ipfs_page/brave_ipfs_browser_proxy.ts",
   "brave_new_tab_page/brave_new_tab_browser_proxy.ts",
+  "brave_leo_assistant_page/brave_leo_assistant_browser_proxy.ts",
   "brave_overrides/about_page.ts",
   "brave_overrides/appearance_page.ts",
   "brave_overrides/basic_page.ts",
