--- a/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
+++ b/browser/brave_vpn/win/brave_vpn_wireguard_service/status_tray/BUILD.gn
@@ -33,6 +33,7 @@ source_set("unit_tests") {
   sources = [ "status_tray_runner_unittest.cc" ]
   deps = [
     ":status_tray",
+    "//chrome:packed_resources",
     "//testing/gtest",
   ]
 }
