--- a/android/brave_java_sources.gni
+++ b/android/brave_java_sources.gni
@@ -15,7 +15,71 @@ import("//brave/components/permissions/android/java_sources.gni")
 import("//brave/components/safetynet/java_sources.gni")
 import("//components/feed/features.gni")
 
-brave_kotlin_sources = [ "../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/activity/PlaylistMenuOnboardingActivity.kt" ]
+brave_kotlin_sources = [ "../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/activity/PlaylistMenuOnboardingActivity.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/adapter/PlaylistOnboardingFragmentStateAdapter.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/adapter/bottomsheet/PlaylistItemOptionsBottomSheetAdapter.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/adapter/bottomsheet/PlaylistOptionsBottomSheetAdapter.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/adapter/recyclerview/AbstractRecyclerViewAdapter.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/adapter/recyclerview/PlaylistAdapter.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/adapter/recyclerview/PlaylistItemAdapter.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/adapter/recyclerview/RecentlyPlayedPlaylistAdapter.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/enums/PlaylistEventEnum.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/enums/PlaylistItemEventEnum.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/enums/PlaylistOptionsEnum.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/extension/MaterialCardViewExtension.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/extension/NumberExtension.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/extension/PopupWindowExtension.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/extension/ViewExtension.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/fragment/AllPlaylistFragment.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/fragment/NewPlaylistFragment.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/fragment/PlaylistFragment.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/fragment/PlaylistOnboardingSingleFragment.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/fragment/PlaylistPlayerFragment.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/interpolator/BraveBounceInterpolator.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/ItemInteractionListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/PlaylistClickListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/PlaylistItemClickListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/PlaylistItemOptionsListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/PlaylistOnboardingActionClickListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/PlaylistOptionsListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/StartDragListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/listener/WebViewResponseListener.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/local_database/PlaylistDatabase.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/local_database/PlaylistItemModelDao.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/local_database/PlaylistRepository.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/CreatePlaylistModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/DownloadProgressModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/MoveOrCopyModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/PlaylistEventModel.kt", 
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/PlaylistItemEventModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/PlaylistItemModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/PlaylistItemOptionModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/PlaylistModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/PlaylistOnboardingModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/PlaylistOptionsModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/RenamePlaylistModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/model/SnackBarActionModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/ConnectionUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/ConstantUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/MediaUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/MenuUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/PlaylistItemGestureHelper.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/PlaylistPreferenceUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/PlaylistUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/util/PlaylistViewUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/view/MovableImageButton.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/view/PlaylistOnboardingPanel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/view/PlaylistToolbar.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/view/bottomsheet/MoveOrCopyToPlaylistBottomSheet.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/view/bottomsheet/PlaylistItemOptionsBottomSheet.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/view/bottomsheet/PlaylistOptionsBottomSheet.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/PlaylistDownloadService.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/PlaylistDownloadUtils.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/PlaylistVideoService.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/PlaylistViewModel.kt",
+"../../brave/android/java/org/chromium/chrome/browser/playlist/kotlin/WebViewClientImpl.kt",
+
+]
 
 brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/BraveAdFreeCalloutDialogFragment.java",
@@ -292,6 +356,7 @@ brave_java_sources = [
   "../../brave/android/java/org/chromium/chrome/browser/paint_preview/BraveStartupPaintPreviewHelper.java",
   "../../brave/android/java/org/chromium/chrome/browser/partnercustomizations/CloseBraveManager.java",
   "../../brave/android/java/org/chromium/chrome/browser/password_manager/settings/BravePasswordSettingsBase.java",
+  "../../brave/android/java/org/chromium/chrome/browser/playlist/BraveChromiumHttpDataSource.java",
   "../../brave/android/java/org/chromium/chrome/browser/playlist/PlaylistHostActivity.java",
   "../../brave/android/java/org/chromium/chrome/browser/playlist/PlaylistServiceFactoryAndroid.java",
   "../../brave/android/java/org/chromium/chrome/browser/playlist/PlaylistServiceObserverImpl.java",
