Change LocationIconView to use the new tune icon

--- a/components/omnibox/browser/sources.gni
+++ b/components/omnibox/browser/sources.gni
@@ -33,6 +33,7 @@ brave_components_omnibox_browser_deps = [
   "//base",
   "//brave/components/brave_search_conversion",
   "//brave/components/constants",
+  "//brave/components/vector_icons",
   "//components/prefs",
   "//url",
 ]
