--- a/components/brave_ads/core/BUILD.gn
+++ b/components/brave_ads/core/BUILD.gn
@@ -40,6 +40,7 @@ source_set("headers") {
     "ads_client_notifier_observer.h",
     "ads_util.h",
     "category_content_info.h",
+    "category_content_value_util.h",
     "confirmation_type.h",
     "database.h",
     "export.h",
